[package]
name = "patagonicus"
version = "0.1.2"
edition = "2024"
authors = ["Gebz <gebz97@proton.me>"]
description = "Relevant Linux System Information in a nice and user-friendly format"
license = "LGPL-3.0-only"
repository = "https://github.com/gebz97/scout.git"
keywords = ["Linux", "procfs", "sysfs", "linux-monitoring"]
readme = "README.md"

[dependencies]
#nix = { version = "0.29.0", features = ["acct", "aio", "dir", "env", "event", "fanotify", "feature", "fs", "hostname", "inotify", "ioctl", "kmod", "mman", "mount", "mqueue", "net", "personality", "pin-utils", "poll", "process", "ptrace", "quota", "reboot", "resource", "sched", "signal", "socket", "term", "time", "ucontext", "uio", "user", "zerocopy"] }
nix = { version = "0.29.0", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
